layout/html/base/src/nsInlineFrame.cpp
@@ -1206,10 +1206,9 @@ nsPositionedInlineFrame::Reflow(nsIPresContext*          aPresContext,
 
   nsRect oldRect(mRect);
 
-  // See if it's an incremental reflow command and we're not the target
+  // See if it's an incremental reflow command
   if (mAbsoluteContainer.HasAbsoluteFrames() &&
-      eReflowReason_Incremental == aReflowState.reason &&
-      !aReflowState.path->mReflowCommand) {
+      eReflowReason_Incremental == aReflowState.reason) {
     // Give the absolute positioning code a chance to handle it
     PRBool  handled;
     nsRect  childBounds;
